<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/background"
    tools:context=".view.activity.FrontActivity">

    <ImageView
        android:layout_width="@dimen/size_200"
        android:layout_height="@dimen/size_200"
        android:src="@drawable/transparent_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_50"
        android:fontFamily="@font/bold"
        android:textSize="@dimen/large_text"
        android:textColor="@color/colorWhite"
        android:text="@string/header_title"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_15"
        android:fontFamily="@font/regular"
        android:textSize="@dimen/small_text"
        android:textColor="@color/colorLightGrey"
        android:text="@string/header_tag"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/btn_get_started"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_60"
        android:layout_marginStart="@dimen/size_25"
        android:layout_marginEnd="@dimen/size_25"
        android:background="@drawable/ripple_blue_10"
        android:layout_marginTop="@dimen/size_70"
        android:gravity="center"
        android:text="@string/get_started"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/regular"
        android:textSize="@dimen/small_text"/>

</LinearLayout>